libs/@local/hashql/hir/tests/ui/lower/checking/type-assertion-unrelated.jsonc
//@ run: fail
//@ description: Ensures type checking fails when asserting a value is of an unrelated type (Integer as String).
[
  "is",
  { "#literal": 42 },
  //~^ ERROR This is of type `Integer`
  "String"
]
